--- a/block-BNaabf/projects/form.html
+++ b/block-BNaabf/projects/form.html
@@ -7,14 +7,12 @@
     <link rel="stylesheet" href="./stylesheet/style.css" />
   </head>
   <body>
-    <section class="container">
-      <h1>User information</h1>
-      <form action="/form" method="GET">
-        <input type="text" name="name" placeholder="Enter your name" />
-        <input type="email" name="email" placeholder="Enter your email" />
-        <input type="text" name="age" placeholder="Enter your age" />
-        <input type="submit" value="submit" />
-      </form>
-    </section>
+    <h1>User information</h1>
+    <form action="./form" method="POST">
+      <input type="text" name="name" placeholder="Enter your name" />
+      <input type="email" name="email" placeholder="email" />
+      <input type="text" name="age" placeholder="age" />
+      <input type="submit" value="submit" />
+    </form>
   </body>
 </html>
